testsuite/tests/properties/invalid_no/test.out
== bad_type.lkt ==
bad_type.lkt:4:33: error: Invalid type for No expression: Int
4 |     @exported fun prop(): Int = null[Int]
  |                                 ^^^^^^^^^


== correct.lkt ==
Code generation was successful

lkt_compile: Done
